releases/v2.9.26/README.md
# Monitora Campestre-Savânico — Alvo Global

Rotinas em R para tratamento, auditoria, validação e análise de dados do **Alvo Global Plantas Herbáceas e Lenhosas, Nativas e Exóticas** do **Componente Campestre Savânico** do Programa Monitora.

## Versão pública atual

- Versão: `v2.9.26`
- Build público atual: `v2.9.26-20260918-r04`
- Script principal: [`monitora_campsav_alvo_global_v2.9.26.R`](monitora_campsav_alvo_global_v2.9.26.R)
- Script canônico: [`monitora_campsav_alvo_global.R`](monitora_campsav_alvo_global.R)
- Cópia congelada: [`releases/v2.9.26/`](releases/v2.9.26/)
- Notas da versão: [`RELEASE_NOTES_v2.9.26.md`](RELEASE_NOTES_v2.9.26.md)
- Release no GitHub: [v2.9.26](https://github.com/danilovcorrea/Monitora-Campestre-Savanico/releases/tag/v2.9.26)

## Finalidade

O script lê diferentes exportações do SISMONITORA, reconhece estruturas históricas de XLSForm, harmoniza atributos, audita a importação, deduplica registros, aplica sanitizações e correções auditáveis, valida o produto corrigido e gera bases, relatórios, estatísticas, gráficos e produtos espaciais.

A validação operacional de `registros_corrig.csv` usa o contrato consolidado dos XLSForms 2022, 2023, 2024 e 2025, com projeção final conforme o XLSForm 2025 e o template SISMONITORA. `registros_validados.csv` somente é materializado quando não restam pendências impeditivas.

## Destaques da v2.9.26

- A revisão substitutiva `r04` elimina falsos negativos de persistência ao
  compactar a lista repetida de coletores: o gate passa a conferir a sequência
  semântica ordenada nome–CPF por coleta, sem expor dados pessoais, e continua
  bloqueando qualquer alteração material real. O relatório de validação também
  passa a ser autônomo nos checkpoints parciais, inclusive em
  `painel_incremental_registros_corrig`.
- A revisão substitutiva `r03` corrige a ordem de carregamento do relatório de
  validação nos checkpoints parciais. A homologação real da FNB no R 4.6.0 do
  Windows gerou o relatório para 21.311 registros sem alterar contrato,
  inicialização ou semântica das funções.
- A revisão substitutiva `r02` reforça UTF-8 no Windows nos fluxos de CSV,
  relatórios, QField e finalização, sem mudar o contrato XLSForm ou as decisões
  semânticas. A rodada APA Ibirapuitã anteriormente falha foi concluída no
  RStudio 2026.04 com R 4.6.0.
- O relatório de validação apresenta histórico documentado de decisões,
  modificações efetivas, exclusões e ações espaciais por sessão e por ano. Efeito
  não comprovado é informado como não quantificável, nunca como zero presumido.
- O relatório analítico melhora precisão de valores pequenos, documenta a
  mudança do instrumento de serrapilheira em 2025, evita hipóteses de mudança
  baseadas somente em estabilidade e incorpora análise complementar da época de
  amostragem. A figura quantifica associação e sensibilidade; a recomendação
  sobre linha de base não confunde falta de corte seguro com comparabilidade.
- As evidências temporais usam todas as UAs comuns a cada par de campanhas;
  painéis por ano de entrada permanecem como sensibilidade, sem substituir a
  população principal. Formas de vida com zero toque deixam de ocupar tabelas.
- A opção QField gera projeto offline de navegação com camadas anuais dos dois
  vergalhões, imagem regional Sentinel e imagens detalhadas fornecidas pelo
  usuário diretamente em `qfield_input/`, sem subpasta da UC nem nome obrigatório
  para o MBTiles em execução com uma UC. A opção fica desligada por padrão;
  posições divergentes só entram quando a validação espacial central as aceita.
  O projeto não modifica os dados biológicos.
- O zoom realmente materializado no MBTiles, e não seu nome, identifica a imagem
  detalhada. O módulo deriva dos consensos espaciais um círculo de 500 m por UA,
  recorta fisicamente os tiles, preserva a fonte e registra hashes, tiles e
  redução. Camadas vetoriais colocadas na mesma pasta são incorporadas; camadas
  lineares explicitamente declaradas com papel `acesso` tornam-se `UC_acessos`,
  somente leitura.
- No projeto QField, o mapa permanece em EPSG:3857 para compatibilidade com os
  MBTiles; a interface de navegação exibe longitude e latitude em WGS 84,
  graus decimais e seis casas.
- `Google Satellite` volta a constar como mapa-base alternativo exclusivamente
  online e inicialmente desativado. A camada requer internet e não é baixada,
  empacotada nem usada para comprovar a cobertura dos fundos offline.
- O início do RStudio, o contrato único/XLSForm 2025 e os módulos anteriores
  permanecem preservados. O script segue abaixo de 5 MB também em CRLF.

### Preservado da v2.9.24

- Exportações XLSX recentes do SISMONITORA localizam a aba biológica pelo
  esquema esperado, sem depender da posição da planilha e sem conversão
  silenciosa de texto ou codificação.
- Representações físicas concorrentes do mesmo campo são reconciliadas antes
  do painel somente quando não divergem. A intenção de correção só é
  persistida depois do preflight semântico completo.
- O relatório de validação separa arquivos atuais e herdados, modificações do
  usuário, modificações automáticas e registros técnicos de auditoria,
  recuperação e conciliação.
- Relatórios analíticos explicitam UAs, registros e pontos com presença,
  padronizam cobertura e proporção relativa e tratam campanhas únicas e textos
  condicionais sem produzir comparações artificiais.
- Grafias históricas equivalentes da mesma UC são reconciliadas apenas nas
  cópias derivadas dos relatórios e estatísticas; dados e linhagem permanecem
  inalterados.
- O leitor incremental testa se `data.table::fread` preserva aspas escapadas e
  usa a base R somente em runtimes afetados. O caso real com 2.048 aspas por
  valor foi aprovado no Linux e no R 4.6.0 do Windows.
- O contrato único, o XLSForm 2025 e a inicialização do RStudio permanecem
  integralmente inalterados.

### Preservado da v2.9.23

- A validação pré-painel reconhece o label exato de uma choice `select_one`
  quando o próprio contrato único estabelece uma relação unívoca com o name.
  A resolução ocorre somente na cópia usada pela validação e não regrava o
  valor original do dataset.
- `select_multiple` continua estrito, sem tradução de labels, alias local,
  normalização por caixa ou acento e sem flexibilização do XLSForm 2025.
- Ocorrências de token fora do domínio na mesma linha são distinguidas pelo
  caminho contratual, pela lista e pelo token inválido. Essa identidade também
  é usada pelas justificativas persistentes, evitando colisões e duplicações.
- Casos reais no PNI e no RVSVOB foram homologados no Linux, no R 4.6.0 e no
  RStudio do Windows, com contagens exatas, zero duplicata semântica e
  desempenho preservado.
- O contrato XLSForm 2025 permanece integralmente inalterado.

### Preservado da v2.9.22

- Um gate pré-painel verifica os valores `select_one` e `select_multiple`
  diretamente contra as `choices` vigentes do contrato único/XLSForm 2025.
  Tokens fora do domínio são bloqueados sem alias ou mapa local concorrente.
- Correções de hábito passam por uma validação fechada de relevância por
  categoria, forma e campo físico antes da aplicação. O ramo errado não pode
  receber a decisão destinada a outro contexto.
- A fila admite `replace_token` seguido de `append_token` na mesma célula
  somente quando origem, destino e token acrescentado são distintos. A
  decomposição continua atômica e sobreposições permanecem conflitantes.
- Identificadores estáveis com os textos literais `NA` ou `NULL` deixam de ser
  aceitos como chaves válidas.
- O contrato XLSForm 2025 permanece integralmente inalterado.

### Preservado da v2.9.21

- Dependências `relevance` somente fecham campos superiores quando o token
  também pertence às `choices` vigentes do pai. O token histórico órfão
  `outros` deixa de ser criado ou aceito como forma de vida exótica.
- Checkpoints legados com `outros` podem ser reconciliados automaticamente
  quando há exatamente uma forma exótica válida já marcada, texto de espécie
  preservável e nenhum conflito no ramo de destino. Ambiguidades continuam
  bloqueadas sem mutação parcial.
- O preenchimento explícito de “outra espécie exótica” materializa somente os
  ancestrais semânticos válidos do XLSForm 2025. Módulo histórico, tokens de
  impactos e “outra forma de vida” permanecem fora dessa regra.
- O contrato XLSForm embutido permanece integralmente idêntico ao da v2.9.20.
  A execução real de 20.705 registros alterou somente 20 células autorizadas
  em quatro registros, manteve a cardinalidade e concluiu com zero bloqueio.

### Preservado da v2.9.20

- A leitura dos COGs Sentinel-2 deixa de reatribuir georreferência a visões
  internas. O GDAL somente utiliza uma visão quando bandas, CRS, extensão e
  resolução permanecem coerentes com o arquivo oficial.
- Caches antigos sem garantia espacial são rejeitados; a rotina retorna ao COG
  principal quando a visão interna não atende ao contrato.
- A exclusão de uma correção pendente é efetivada mesmo que outras operações da
  fila ainda sejam conflitantes. Os conflitos restantes continuam auditados e
  bloqueados até serem resolvidos.
- Testes com COGs oficiais, execução real sem cache e Windows confirmaram a
  correção, sem alteração dos produtos de dados ou regressão de inicialização.

### Preservado da v2.9.19

- A sanitização assistida de hábitos obrigatórios passa a usar a mesma
  elegibilidade contratual no diagnóstico, na prévia, na aplicação e no replay.
- Valores inválidos não vazios, como `?`, são efetivamente substituídos quando
  a ocorrência foi identificada pelo contrato XLSForm. Valores já válidos
  permanecem protegidos contra sobrescrita.
- A operação continua atômica, idempotente e registrada na linhagem. A
  homologação real no Windows confirmou a correção nos produtos corrigido,
  validado e de importação, sem perda do histórico acumulado.
- Inicialização rápida do RStudio, contrato único, painel, demais correções,
  produtos, relatórios, estatísticas, mapas e desempenho permanecem preservados.

### Preservado da v2.9.18

- O arquivo único foi reduzido para 4,47 MB em LF e 4,55 MB após conversão
  integral para CRLF, permanecendo 693.541 bytes abaixo do limite rígido de
  5 MiB do editor do RStudio para Windows.
- O contrato consolidado dos XLSForms permanece embutido no próprio `.R`,
  agora em serialização portável, compactada e validada por componentes,
  cardinalidade e igualdade integral de conteúdo.
- A compactação remove apenas redundância física. Código executável,
  inicialização rápida, dados, painel, linhagem, produtos, análises e mapas
  permanecem semanticamente idênticos à v2.9.17.
- O repositório fixa finais de linha LF para scripts R, impedindo que um clone
  no Windows volte a ultrapassar o limite do RStudio por conversão automática.

### Preservado da v2.9.17

- O relatório consolidado de validação passa a oferecer Markdown e DOCX
  editáveis, com modelo A4 embutido, tabelas legíveis, hyperlinks e publicação
  protegida contra caminhos longos no Word para Windows.
- Os achados analíticos identificam o painel fixo, seu ano inicial e o número
  de UAs comparadas. A direção observada também é confrontada com cada painel
  iniciado após ampliação do esforço, sem misturar populações analíticas.
- O índice de evidências registra o ano inicial do painel e a população
  analítica. A redação de valores de p inferiores a 0,001 foi normalizada sem
  alterar cálculos, denominadores ou critérios estatísticos.
- Um resolvedor físico central liga paths, names, labels e aliases exatos ao
  contrato único. Ambiguidades ou duplicidades falham de modo fechado.
- O fechamento hierárquico de formas de vida usa somente as dependências do
  XLSForm 21FEV25, inclusive relações transitivas; texto livre deixa de ser
  interpretado como token, eliminando falsas ocorrências de “outra forma de
  vida”.
- A triagem de secas ou mortas e os relatórios analíticos compartilham a mesma
  resolução contratual dos atributos de impactos, distinguindo campo vazio,
  atributo ausente e resolução ambígua.
- A resolução é memorizada pela assinatura das colunas e não percorre linhas
  adicionais do conjunto de dados. Os gates reais não apontaram regressão de
  desempenho.

### Preservado da v2.9.16

- A aquisição Sentinel-2 percorre as páginas do catálogo, amplia a janela
  temporal de forma limitada e prioriza cobertura, baixa nebulosidade local e
  recência sem deixar o mapa sem fundo quando o cenário ideal não existe.
- A rotina usa uma única extensão técnica em todas as etapas, evita remontagens
  redundantes e utiliza os COGs Sentinel-2 de fonte nativa de 10 m. Prévia
  georreferenciada de baixa resolução não é aceita como mapa final.
- A resolução de renderização é adequada à extensão e à dimensão final da
  figura, com limite de dois milhões de células. O gate exige cobertura visual
  integral, UAs sobre pixels válidos e resolução aprovada antes da publicação.
- O mapa somente é declarado concluído depois da materialização do arquivo e
  de sua auditoria; data, qualidade, cobertura, modo de composição, paginação
  e eventual contingência permanecem transparentes.
- A continuidade incremental passa a importar e verificar o inventário de
  sessões quando ele estiver assinado pelo manifesto, preservando inclusive
  execuções legadas sem decisões semânticas.
- A ordem histórica herdada permanece estável, a sessão atual é acrescentada
  ao final e o novo inventário é novamente assinado; nenhuma sessão de
  inventário cria eventos semânticos artificiais.
- A recuperação e a atualização foram homologadas em 12 UCs, com preservação
  integral das linhas e da linhagem, relatórios e cartografia nas execuções
  completas e continuidade controlada nas bases com pendências impeditivas.

### Preservado das versões anteriores

- A incorporação recursiva de novas COLETAs e a edição contratual de UA
  publicadas na v2.9.14 permanecem atômicas e inalteradas.
- Relatórios analíticos continuam separando série inicial, UAs comuns pareadas
  e painéis iniciados em cada ampliação do esforço, dentro da seção temática.
- Figuras técnicas e dos relatórios conservam paleta semântica, iconografia e
  disposição estatística unificadas.
- A seleção Sentinel-2, a síntese de fogo, a persistência dos hábitos e as
  hipóteses ecológicas condicionadas às evidências permanecem inalteradas.
- Relatórios de campanha única continuam transversais, sem inferência temporal
  indevida; a busca Sentinel-2 continua progressiva e o localizador resiliente.
- Persistência transacional, prévia integral otimizada e rótulo legível de
  `amostragem/especie` permanecem ativos.

- A geração de figuras em caminhos longos no Windows continua usando nomes
  compactos, determinísticos e sem colisões somente quando necessário.
- Relatórios analíticos e planilhas SISMONITORA também compactam somente o nome
  físico quando o caminho excede o orçamento conservador do Word ou Excel no
  Windows. O nome lógico e o contexto permanecem nos índices e manifestos; em
  caminhos seguros, o nome anterior é preservado sem alteração.
- Lotes de atributos superiores e listas de tokens usam o valor bruto esperado
  específico de cada COLETA; a verificação atômica ocorre antes de movimentos
  volumosos e nenhuma mutação parcial permanece quando uma precondição falha.
- Uma falha recuperável é contida pelo painel: a sessão permanece aberta,
  apresenta diagnóstico compacto e permite revisar, atualizar ou salvar.
- O relatório de validação ganhou diretório próprio, estrutura executiva,
  linguagem acessível, tabelas resumidas, hiperlinks e layout profissional.
- O manual cobre os 13 modos e os principais percursos operacionais em
  `manual_usuario/`. A geração do PDF tem opção independente, padrão `N`, e
  permanece fora do caminho crítico.
- O índice de produtos informa o comprimento, o limite recomendado e a situação
  de abertura no Windows. README do output, migração de caminhos legados e
  organização final permanecem alinhados aos produtos documentais.
- A inicialização rápida homologada na v2.9.1, a linhagem cumulativa da v2.9.7,
  o contrato único, os 13 modos e todos os produtos anteriores permanecem
  preservados.

## Revise as opções antes de cada execução

Os padrões da v2.9.16 representam a continuidade incremental integral usada pela
equipe de curadoria. Eles ativam painel, validação espacial, produtos de dados,
planilhas SISMONITORA, manual e relatórios analíticos. **Antes de cada execução,
revise o modo e todas as variáveis `MONITORA_OPCAO_*` no bloco inicial.** Desative
os módulos que não correspondem à ação pretendida. Desative produtos que não sejam necessários.
O modo `painel_incremental_completo` exige exatamente um `registros_corrig*.csv`
e a linhagem da mesma execução anterior.

Quando o mapa Sentinel estiver ativado, a consulta começa na janela mais recente
e é ampliada somente se nenhuma aquisição atender à cobertura mínima e ao limite
local de nuvens e sombras. O módulo registra todas as janelas consultadas e não
abandona o mapa apenas porque a janela inicial foi insuficiente.

O relatório consolidado materializa `inventario_sessoes_linhagem.csv` e a seção
8.1. O inventário distingue execuções registradas, sessões com decisões,
eventos herdados, reaplicados, novos e acumulados. Na v2.9.7, o manifesto também
assina `metadados_sessoes_painel_consolidado.csv`, que acompanha a linhagem nas
continuações seguintes.

Na v2.9.16, o manifesto passa a assinar também
`inventario_sessoes_linhagem.csv`. Copie sempre a pasta `linhagem/` inteira da
execução anterior: a ordem das sessões herdadas é preservada e a nova sessão
é anexada ao final, mesmo quando uma execução legada não possui data ou
decisões semânticas registradas.

```r
MONITORA_MODO_EXECUCAO <- "painel_incremental_completo"
MONITORA_OPCAO_INCORPORAR_NOVAS_COLETAS <- "N"
MONITORA_OPCAO_ABRIR_PAINEL_CORRECOES <- "S"
MONITORA_OPCAO_GERAR_REGISTROS_VALIDADOS <- "S"
MONITORA_OPCAO_GERAR_REGISTROS_VALIDADOS_IMPORTACAO_SISMONITORA <- "S"
MONITORA_OPCAO_REMOVER_UUID_IMPORTACAO_SISMONITORA <- "N"
MONITORA_OPCAO_GERAR_MANUAL_USUARIO <- "S"
MONITORA_OPCAO_GERAR_MANUAL_USUARIO_PDF <- "N"
MONITORA_OPCAO_GERAR_RELATORIO_VALIDACAO_CONSOLIDADO <- "S"
MONITORA_OPCAO_GERAR_RELATORIOS_ANALITICOS <- "S"
MONITORA_OPCAO_RELATORIOS_ANALITICOS_MAPA_SATELITE <- "S"
MONITORA_OPCAO_GERAR_REGISTROS_IMPORTADOS <- "S"
MONITORA_OPCAO_VALIDAR_ESPACIAL_COLETAS <- "S"
MONITORA_OPCAO_ABRIR_ABA_VALIDACAO_ESPACIAL <- "S"
MONITORA_OPCAO_REAPLICAR_CORRECOES_ANTERIORES <- "N"
```

Para processar uma entrada bruta sem continuidade anterior, altere pelo menos o
modo para `completo` e decida se o painel deve abrir:

```r
MONITORA_MODO_EXECUCAO <- "completo"
MONITORA_OPCAO_ABRIR_PAINEL_CORRECOES <- "N" # ou "S"
```

Reaplicação, continuidade incremental e execução bruta são fluxos diferentes.
Não combine entradas ou arquivos auxiliares de linhagem provenientes de cadeias
distintas.

Se uma continuidade incremental precisar receber COLETAs omitidas, preserve o
`registros_corrig.csv` e a pasta `linhagem/` da mesma execução, coloque somente
os novos arquivos brutos em `input/novas_coletas/` e altere
`MONITORA_OPCAO_INCORPORAR_NOVAS_COLETAS <- "S"`. A operação exige COLETAs
completas, ignora duplicatas factualmente idênticas e bloqueia o lote inteiro
em caso de conflito.

O manual em Rmd/HTML pode ser gerado para consulta durante a operação. O PDF
tem opção independente e padrão `N`: quando for explicitamente solicitado, é
renderizado somente após o fluxo principal, sem bloquear os produtos de dados
se ocorrer uma falha documental.

## Fluxo e linhagem dos dados

A cadeia auditável é:

```text
input
  → registros_importados_bruto.csv
  → registros_importados.csv
  → registros_importados_operacional_pre_painel.csv
  → registros_corrig.csv
  → registros_validados.csv
```

- `registros_importados_bruto.csv`: retrato técnico da leitura e montagem dos arquivos.
- `registros_importados.csv`: entrada saneada após normalização inicial de cabeçalhos e aliases.
- `registros_importados_operacional_pre_painel.csv`: camada pós-tokenização e pré-painel.
- `registros_corrig.csv`: base canônica corrigida, reconciliada e auditável.
- `registros_validados.csv`: projeção final no schema e na ordem do contrato de destino; só existe após aprovação do gate.

As exclusões deliberadas de coletas e todas as mutações semânticas ficam documentadas. A trilha de linhagem deve acompanhar o produto corrigido em qualquer continuidade incremental.

## Entradas aceitas

Coloque os arquivos exclusivamente em `input/`, na mesma pasta de execução do script. O script reconhece:

- ZIPs de download direto do SISMONITORA, inclusive estruturas internas aninhadas;
- ZIP, CSV, XLSX e XLS de exportações em lote ou planilhas;
- combinações de dados oriundos dos XLSForms 2022, 2023, 2024 e 2025;
- `registros_corrig*.csv` gerado pelo próprio script, somente nos modos incrementais adequados;
- sidecars de linhagem e ledgers semânticos, nos fluxos de replay ou continuidade documentados.

Não extraia ZIPs manualmente e não misture produtos antigos com a entrada bruta. A extração recursiva ocorre em `extracted/`.

## Uso básico

1. Crie uma pasta limpa de execução.
2. Copie `monitora_campsav_alvo_global_v2.9.18.R` para a raiz.
3. Crie `input/` e coloque apenas os arquivos de entrada pertinentes.
4. Ajuste o bloco operacional do início do script, se necessário.
5. Execute no RStudio ou com `Rscript monitora_campsav_alvo_global_v2.9.18.R`.
6. Confira os produtos em `output/`, o manual em `manual_usuario/`, o relatório
   de validação em `output/07_relatorio_validacao/` e a trilha técnica em
   `log/`.

## Modos de execução

A v2.9.18 preserva os 13 modos públicos:

- `completo`
- `sem_png`
- `estatisticas_sem_graficos`
- `ate_registros_corrig`
- `painel_e_parar`
- `abrir_painel_cache`
- `painel_incremental_registros_corrig`
- `registros_corrig_estatisticas_sem_graficos`
- `registros_corrig_sem_png`
- `registros_corrig_completo`
- `painel_incremental_estatisticas_sem_graficos`
- `painel_incremental_sem_png`
- `painel_incremental_completo`

Os modos `registros_corrig_*` e `painel_incremental_*` são retomadas controladas. Use somente produtos e linhagem provenientes da mesma execução anterior.

## Painel de correções assistidas

O painel apresenta ocorrências impeditivas e outras ocorrências para revisão, permite correções específicas, sanitizações amplas, movimentos individuais ou em lote e mantém uma fila semântica auditável.

O salvamento gera `registros_corrig.csv`, relatórios pós-painel, trilha de operações e auditorias de persistência. Uma atualização integral já concluída não é repetida no fechamento se nenhuma operação tiver sido adicionada desde então.

## Replay semântico e continuidade incremental

São fluxos diferentes e não devem ser combinados.

### Replay

Parte novamente dos arquivos brutos e reaplica um ledger semântico:

```r
MONITORA_OPCAO_REAPLICAR_CORRECOES_ANTERIORES <- "S"
MONITORA_REPLAY_CONTRATO_SEMANTICO_VERSAO <- "replay_semantico_v2"
```

Coloque somente uma cópia idêntica dos arquivos brutos e o ledger em `input/linhagem/correcoes_semanticas_consolidada.csv`. Não inclua `registros_corrig.csv` nem sidecars de continuidade incremental. Os modos compatíveis são `completo`, `sem_png`, `estatisticas_sem_graficos`, `ate_registros_corrig` e `painel_e_parar`.

Para confrontar o replay com uma run de referência, copie a pasta dessa execução para `input/oraculo_replay/` e ative:

```r
MONITORA_OPCAO_COMPARAR_REPLAY_COM_ORACULO <- "S"
MONITORA_OPCAO_REPLAY_ORACULO_ABORTAR_DIVERGENCIA <- "S"
```

O oráculo é usado somente na auditoria. Ele nunca substitui o input nem fornece valores ao produto. Oráculo ausente, identidade não única ou qualquer divergência impedem a exportação quando o gate estrito está ativo. Os resultados ficam em `output/03_auditorias/replay_semantico/`.

### Continuidade incremental

Coloque em `input/` um único `registros_corrig*.csv` e copie integralmente a pasta `output/02_painel_correcoes/linhagem/` da mesma execução para `input/linhagem/`. Use um modo `painel_incremental_*` e mantenha o replay em `N`.

Copie a linhagem do **output** da última rodada, não a antiga linhagem que ela
recebeu em `input/`. Não edite manualmente ledger, manifesto ou arquivos de
aplicação; isso rompe a garantia de proveniência.

Em cadeias anteriores à v2.9.7, a recuperação dos metadados históricos é uma
migração técnica única. Depois que o consolidado estiver assinado no manifesto,
as próximas rodadas não repetem a migração e seguem o fluxo incremental normal.

## Produtos principais

- `output/01_produtos_dados/`: produtos de dados, inclusive `registros_corrig.csv`, `registros_validados.csv` e `registros_corrig_stat.csv`.
- `output/02_painel_correcoes/`: operações da sessão, ocorrências diagnósticas, relatórios temáticos e linhagem.
- `output/03_auditorias/`: auditorias de importação, contrato, completude, persistência e replay.
- `output/04_validacao_espacial/`: consensos, alertas, correções, mapas e KMLs, quando habilitados.
- `output/05_estatisticas/`: tabelas e relatórios estatísticos.
- `output/06_graficos/`: produtos gráficos.
- `output/07_relatorio_validacao/`: relatório consolidado de validação em HTML e PDF, figuras e tabelas de apoio em linguagem voltada ao público técnico.
- `output/08_relatorios_analiticos/`: relatórios sintético e detalhado, tabelas,
  figuras, mapas e auditorias, quando o módulo for habilitado.
- `output/04_validacao_espacial/`: também recebe os KML/KMZ de UAs, estatísticas e áreas operacionais de proteção.
- `manual_usuario/`: manual do usuário em Rmd e HTML; o PDF só é produzido quando a opção independente for explicitamente ativada.
- `log/`: eventos, performance, memória e rastreabilidade da execução.

## Requisitos de R

O script usa, conforme o modo selecionado, pacotes como `data.table`, `dplyr`,
`purrr`, `stringr`, `readxl`, `openxlsx`, `sf`, `cli`, `ggplot2`, `ggrepel`,
`shiny`, `DT`, `rmarkdown`, `knitr`, `kableExtra`, `pagedown`, `jsonlite`,
`digest` e os consumidores geoespaciais ativados pelo mapa orbital.

O próprio script tenta instalar dependências ausentes. Em ambientes institucionais, sem internet ou sem permissão de instalação, instale previamente os pacotes necessários.

## Variáveis de ambiente úteis

| Variável | Exemplo | Finalidade |
|---|---|---|
| `MONITORA_PERFIL_EXECUCAO` | `economico` | Ajusta estratégia de performance e memória. |
| `MONITORA_BATCH_SIZE_CSV` | `100000` | Define o tamanho dos lotes de leitura. |
| `MONITORA_DT_THREADS` | `4` | Limita threads do `data.table`. |
| `MONITORA_GC_MODO` | `auto` | Controla a coleta de memória. |
| `MONITORA_EXPORTAR_GRAFICOS` | `false` | Controla a exportação de gráficos. |
| `MONITORA_EXPORTAR_KML` | `false` | Controla a exportação de KML. |
| `MONITORA_STAT_BOOT` | `999` | Define reamostragens bootstrap. |
| `MONITORA_STAT_PERM` | `999` | Define permutações estatísticas. |

## Privacidade

Arquivos em `input/`, `output/`, `log/` e `extracted/` podem conter nomes, CPF, coordenadas, fotos, UUIDs, observações de campo, identificadores institucionais e outros dados sensíveis.

Esses diretórios e quaisquer produtos reais de execução não integram a release pública. Antes de compartilhar arquivos gerados, faça triagem de conteúdo e metadados.

## Auditoria antes de publicar

Uma publicação deve confirmar:

- equivalência funcional entre a candidata validada e os scripts públicos, exceto versão, build e defaults declarados;
- parse integral e testes automatizados dos bytes finais;
- identidade byte a byte entre cópias canônicas do script;
- ausência de dados reais, caminhos locais e marcas editoriais internas nos artefatos da versão;
- coerência entre `VERSION`, README, CHANGELOG, release notes, tag e release;
- checksums recriados depois de todas as alterações;
- ZIP montado somente a partir dos artefatos finais permitidos.

## Estrutura do repositório

- `monitora_campsav_alvo_global_v2.9.26.R`: script versionado atual.
- `monitora_campsav_alvo_global.R`: script canônico atual.
- `R_monitora_campsav_alvo_global.R` e `R/monitora_campsav_alvo_global.R`: espelhos canônicos.
- `VERSION`: versão pública atual.
- `CHANGELOG.md`: histórico público de mudanças.
- `RELEASE_NOTES_v2.9.26.md`: notas da versão atual.
- `GUIA_USUARIO_v2.9.26.md`: roteiro operacional resumido.
- `release_assets/v2.9.26/`: conjunto mínimo de artefatos da release.
- `releases/v2.9.26/`: cópia congelada da versão.
- `docs/`: políticas e documentação auxiliar.

## Uso auxiliar de IA generativa

Este projeto teve uma fase inicial de desenvolvimento baseada em edição manual, consulta a documentação técnica, exemplos de código e fontes abertas de referência, incluindo fóruns técnicos e materiais de apoio.

A partir da fase de consolidação publicada como `v2.0.0`, o desenvolvimento passou a contar com apoio de ferramentas de IA generativa para revisão editorial, refatoração, documentação, apoio à depuração, organização do versionamento público, análise de logs, padronização de nomenclatura e proposição de testes.

O uso de IA teve caráter auxiliar. As decisões metodológicas, critérios ecológicos, validações, testes, interpretação dos resultados e responsabilidade técnica pelo script permanecem sob responsabilidade do autor.

Ferramentas de IA não substituem a validação humana, a execução local do script, a inspeção dos produtos, a comparação de hashes, a auditoria dos logs e a responsabilidade técnica sobre a publicação.

## Como citar

```text
CORRÊA, Danilo V. Monitora Campestre-Savânico — Alvo Global. Versão v2.9.26. GitHub, 2026. Disponível em: https://github.com/danilovcorrea/Monitora-Campestre-Savanico/releases/tag/v2.9.26. Acesso em: DD mês AAAA.
```

Repositório público: https://github.com/danilovcorrea/Monitora-Campestre-Savanico

## Licença

Consulte [`LICENSE`](LICENSE).
